Refactor localization variable formatting

--- a/src/main/resources/templates/home/landingPage.html
+++ b/src/main/resources/templates/home/landingPage.html
@@ -17,10 +17,10 @@
 <body>
 <section id="pageContainer">
     <div id="popupContainer">
-        <div id="popup"><span th:text="#{landing_popup_valid}"></span></div>
+        <div id="popup"><span th:text="#{landing.popup.valid}"></span></div>
     </div>
     <div id="changeLanguage" onclick="changeLanguage()">
-        <span th:text="#{landing_changeLanguage}"></span>
+        <span th:text="#{landing.changeLanguage}"></span>
     </div>
     <section id="contentContainer">
         <div id="content">
@@ -30,14 +30,14 @@
                         <img th:src="@{~/img/logos/treecreateLogo/TCFullLogoWhite.svg}" alt="Treecreate Logo"
                              id="treecreateLogo">
                     </div>
-                    <span id="comingSoon" th:text="#{landing_comingSoon}"></span>
+                    <span id="comingSoon" th:text="#{landing.comingSoon}"></span>
                     <br>
-                    <span id="subscribe" th:text="#{landing_comingSoon_subscribe}"></span>
+                    <span id="subscribe" th:text="#{landing.comingSoon.subscribe}"></span>
                     <div id="emailContainer">
                         <input type="email" id="emailInput" name="newsletterEmail" placeholder=" Din email..."
                                required>
                         <button id="emailSubmitBtn" type="button" onclick="submitPopup()"
-                                th:text="#{landing_submit}"></button>
+                                th:text="#{landing.submit}"></button>
                     </div>
                     <div class="icon-row-top">
                         <a href="/facebook" target="popup"
@@ -54,14 +54,14 @@
             <div id="aboutUsContainer">
                 <div id="aboutUs">
                     <section id="generalInformation">
-                        <span class="title" th:text="#{landing_generalInfo_christmas_title}"></span><br><br>
-                        <span th:text="#{landing_generalInfo_christmas_text}"></span><br>
+                        <span class="title" th:text="#{landing.generalInfo.christmas.title}"></span><br><br>
+                        <span th:text="#{landing.generalInfo.christmas.text}"></span><br>
                         <br>
-                        <span class="subTitle" th:text="#{landing_generalInfo_product_title}"></span><br>
-                        <span th:text="#{landing_generalInfo_product_text}"></span><br>
+                        <span class="subTitle" th:text="#{landing.generalInfo.product.title}"></span><br>
+                        <span th:text="#{landing.generalInfo.product.text}"></span><br>
                         <br>
-                        <span class="subTitle" th:text="#{landing_generalInfo_waste_title}"></span><br>
-                        <span th:text="#{landing_generalInfo_waste_text}"></span><br>
+                        <span class="subTitle" th:text="#{landing.generalInfo.waste.title}"></span><br>
+                        <span th:text="#{landing.generalInfo.waste.text}"></span><br>
                     </section>
 
                     <!-- NEW SECTION -->
@@ -70,24 +70,24 @@
                             <img th:src="@{~/img/images/landingPage/insta6.png}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title" th:text="#{landing_review_peter_title}"></span><br>
-                                <span th:text="#{landing_review_peter_text}"></span>
+                                <span class="title" th:text="#{landing.review.peter.title}"></span><br>
+                                <span th:text="#{landing.review.peter.text}"></span>
                             </div>
                         </div>
                         <div class="review">
                             <img th:src="@{~/img/images/landingPage/insta4.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title" th:text="#{landing_review_amalie_title}"></span><br>
-                                <span th:text="#{landing_review_amalie_text}"></span>
+                                <span class="title" th:text="#{landing.review.amalie.title}"></span><br>
+                                <span th:text="#{landing.review.amalie.text}"></span>
                             </div>
                         </div>
                         <div class="review">
                             <img th:src="@{~/img/images/landingPage/insta5.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title" th:text="#{landing_review_emilie_title}"></span><br>
-                                <span th:text="#{landing_review_emilie_text}"></span>
+                                <span class="title" th:text="#{landing.review.emilie.title}"></span><br>
+                                <span th:text="#{landing.review.emilie.text}"></span>
                             </div>
                         </div>
                     </section>
@@ -98,24 +98,24 @@
                             <img th:src="@{~/img/images/landingPage/instagramTree1.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title" th:text="#{landing_review_desi_title}"></span><br>
-                                <span th:text="#{landing_review_desi_text}"></span>
+                                <span class="title" th:text="#{landing.review.desi.title}"></span><br>
+                                <span th:text="#{landing.review.desi.text}"></span>
                             </div>
                         </div>
                         <div class="review">
                             <img th:src="@{~/img/images/landingPage/instagramTree2.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title" th:text="#{landing_review_anna_title}"></span><br>
-                                <span th:text="#{landing_review_anna_text}"></span>
+                                <span class="title" th:text="#{landing.review.anna.title}"></span><br>
+                                <span th:text="#{landing.review.anna.text}"></span>
                             </div>
                         </div>
                         <div class="review">
                             <img th:src="@{~/img/images/landingPage/instagramTree3.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title" th:text="#{landing_review_laura_title}"></span><br>
-                                <span th:text="#{landing_review_laura_text}"></span>
+                                <span class="title" th:text="#{landing.review.laura.title}"></span><br>
+                                <span th:text="#{landing.review.laura.text}"></span>
                             </div>
                         </div>
                     </section>
@@ -125,48 +125,48 @@
                             <img th:src="@{~/img/images/landingPage/insta6.png}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title" th:text="#{landing_review_peter_title}"></span><br>
-                                <span th:text="#{landing_review_peter_text}"></span>
+                                <span class="title" th:text="#{landing.review.peter.title}"></span><br>
+                                <span th:text="#{landing.review.peter.text}"></span>
                             </div>
                         </div>
                         <div class="review">
                             <img th:src="@{~/img/images/landingPage/insta4.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title" th:text="#{landing_review_amalie_title}"></span><br>
-                                <span th:text="#{landing_review_amalie_text}"></span>
+                                <span class="title" th:text="#{landing.review.amalie.title}"></span><br>
+                                <span th:text="#{landing.review.amalie.text}"></span>
                             </div>
                         </div>
                         <div class="review">
                             <img th:src="@{~/img/images/landingPage/insta5.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title" th:text="#{landing_review_emilie_text}"></span><br>
-                                <span th:text="#{landing_review_emilie_text}"></span>
+                                <span class="title" th:text="#{landing.review.emilie.text}"></span><br>
+                                <span th:text="#{landing.review.emilie.text}"></span>
                             </div>
                         </div>
                         <div class="review">
                             <img th:src="@{~/img/images/landingPage/instagramTree1.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title" th:text="#{landing_review_desi_title}"></span><br>
-                                <span th:text="#{landing_review_desi_text}"></span>
+                                <span class="title" th:text="#{landing.review.desi.title}"></span><br>
+                                <span th:text="#{landing.review.desi.text}"></span>
                             </div>
                         </div>
                         <div class="review">
                             <img th:src="@{~/img/images/landingPage/instagramTree2.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title" th:text="#{landing_review_anna_title}"></span><br>
-                                <span th:text="#{landing_review_anna_text}"></span>
+                                <span class="title" th:text="#{landing.review.anna.title}"></span><br>
+                                <span th:text="#{landing.review.anna.text}"></span>
                             </div>
                         </div>
                         <div class="review">
                             <img th:src="@{~/img/images/landingPage/instagramTree3.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title" th:text="#{landing_review_laura_title}"></span><br>
-                                <span th:text="#{landing_review_laura_text}"></span>
+                                <span class="title" th:text="#{landing.review.laura.title}"></span><br>
+                                <span th:text="#{landing.review.laura.text}"></span>
                             </div>
                         </div>
                     </div>
@@ -178,17 +178,17 @@
         <nav id="footer">
             <div class="footer-row">
                 <div class="section">
-                    <span class="title" th:text="#{landing_footer_contact_title}"></span><br>
-                    <span th:text="#{landing_footer_contact_text}"></span>
+                    <span class="title" th:text="#{landing.footer.contact.title}"></span><br>
+                    <span th:text="#{landing.footer.contact.text}"></span>
                 </div>
                 <div class="section">
-                    <span class="title" th:text="#{landing_footer_product_title}"></span><br>
-                    <span th:text="#{landing_footer_product_text}"></span>
+                    <span class="title" th:text="#{landing.footer.product.title}"></span><br>
+                    <span th:text="#{landing.footer.product.text}"></span>
                 </div>
 
                 <div class="section">
-                    <span class="title" th:text="#{landing_footer_address_title}"></span><br>
-                    <span th:text="#{landing_footer_address_text}"></span>
+                    <span class="title" th:text="#{landing.footer.address.title}"></span><br>
+                    <span th:text="#{landing.footer.address.text}"></span>
                 </div>
             </div>
             <div class="footer-row">
@@ -204,7 +204,7 @@
                 </div>
             </div>
             <div class="footer-row" id="footer-bottom">
-                <div class="section" th:text="#{landing_footer_copyright}"></div>
+                <div class="section" th:text="#{landing.footer.copyright}"></div>
             </div>
         </nav>
     </section>
