--- a/src/main/resources/static/styles/index.css
+++ b/src/main/resources/static/styles/index.css
@@ -12,11 +12,12 @@ body, html
     margin: 0;
 
     --mainColor: #F4CBA2;
+    --mainSoftColor: rgba(244, 203, 162, 0.10);
     --navbarMainColor: #AF6826;
-    --backgroundColor: #FFFFFF;
+    --backgroundColor: #F5F2F2;
     --textColor: #000000;
     --actionColor: #EBC6AB;
-    --inactiveColor: rgba(0, 0, 0, 0.4)
+    --inactiveColor: rgba(0, 0, 0, 0.4);
 }
 
 a
