--- a/src/main/resources/static/styles/aboutUs.css
+++ b/src/main/resources/static/styles/aboutUs.css
@@ -56,7 +56,7 @@ html, body
 #navBar a
 {
     padding: 0 13px;
-    font-size: 17px;
+    font-size: var(--fontRegular);
 }
 
 #navBar .icon
@@ -76,7 +76,7 @@ html, body
 {
     margin: 5vh 15vw;
     width: 70vw;
-    font-size: 24px;
+    font-size: var(--fontRegular);
     text-align: center;
     text-shadow: 0 1px 3px #000000;
 }
@@ -88,12 +88,12 @@ html, body
 
 #aboutUs .title
 {
-    font-size: 48px;
+    font-size: var(--fontYourMom);
 }
 
 #aboutUs .subTitle
 {
-    font-size: 32px;
+    font-size: var(--fontSubtitle);
 }
 
 #aboutUs section
@@ -181,19 +181,19 @@ html, body
 
 #footer
 {
-    font-size: 18px;
+    font-size: var(--fontSmall);
     text-shadow: 0 1px 3px #000000;
     text-align: center;
 }
 
 #footer .title
 {
-    font-size: 30px;
+    font-size: var(--fontSubtitle);
 }
 
 #footer-bottom
 {
-    font-size: 14px;
+    font-size: var(--fontExtraSmall);
 }
 
 #footer-separator
