--- a/src/main/resources/static/styles/index.css
+++ b/src/main/resources/static/styles/index.css
@@ -6,7 +6,7 @@ body, html
     font-family: Spectral, Helvetica, sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 24px;
+    font-size: 18px;
     line-height: 27px;
     color: black;
     margin: 0;
@@ -18,6 +18,13 @@ body, html
     --textColor: #000000;
     --actionColor: #EBC6AB;
     --inactiveColor: rgba(0, 0, 0, 0.4);
+
+    --fontExtraSmall: 8px;
+    --fontSmall: 12px;
+    --fontRegular: 18px;
+    --fontSubtitle: 24px;
+    --fontTitle: 26px;
+    --fontYourMom: 48px;
 }
 
 a
