--- a/src/main/resources/static/styles/aboutUs.css
+++ b/src/main/resources/static/styles/aboutUs.css
@@ -19,19 +19,6 @@ html, body
     background-size: cover;
 }
 
-#navBar
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-
-    width: 100%;
-    height: 6vh;
-    background-color: white;
-}
-
-
 #contentContainer
 {
     /* Align the content in the center of the page horizontally and vertically */
@@ -39,37 +26,6 @@ html, body
     justify-content: center;
     align-items: center;
     color: white;
-}
-
-#footerContainer
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    color: white;
-
-    width: 100%;
-    height: 20vh;
-}
-
-#navBar a
-{
-    padding: 0 13px;
-    font-size: var(--fontRegular);
-}
-
-#navBar .icon
-{
-    width: 4vh;
-    height: 4vh;
-    vertical-align: middle;
-}
-
-#navBar-right .icon
-{
-    width: 2.7vh;
-    padding-bottom: 0.6vh;
 }
 
 #content
@@ -155,49 +111,9 @@ html, body
     text-align: left;
 }
 
-
-.footer-row
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-#footer .icon
-{
-    height: 4vh;
-    width: 4vh;
-}
-
-#footer .section
-{
-    margin: 0 2vw;
-}
-
-#footer .footer-row:first-child .section
-{
-    width: 25%;
-}
-
 #footer
 {
-    font-size: var(--fontSmall);
-    text-shadow: 0 1px 3px #000000;
-    text-align: center;
-}
-
-#footer .title
-{
-    font-size: var(--fontSubtitle);
-}
-
-#footer-bottom
-{
-    font-size: var(--fontExtraSmall);
-}
-
-#footer-separator
-{
+    /* Override the template footer to adjust for the dark background */
     color: white;
-    width: 70vw;
+    text-shadow: 0 1px 3px #000000;
 }
