--- a/src/main/resources/templates/home/landingPage.html
+++ b/src/main/resources/templates/home/landingPage.html
@@ -141,7 +141,7 @@
                             <img th:src="@{~/img/images/landingPage/insta5.jpg}" alt="Tree Design"
                                  class="image">
                             <div class="text">
-                                <span class="title" th:text="#{landing.review.emilie.text}"></span><br>
+                                <span class="title" th:text="#{landing.review.emilie.title}"></span><br>
                                 <span th:text="#{landing.review.emilie.text}"></span>
                             </div>
                         </div>
