--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -9,6 +9,13 @@
     <link th:href="@{/styles/productFooter.css}" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share+Tech">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spectral">
+
+    <!-- modal test code -->
+    <link href="/styles/login.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </head>
 <body>
 <section id="navigationContainer">
@@ -45,7 +52,7 @@
                 <span> (0) Items</span>
                 <hr class="hoverLine">
             </a>
-            <a href="/login">
+            <a data-toggle="modal" data-target="#loginModal">
                 <span>Login</span>
                 <hr class="hoverLine">
             </a>
@@ -55,12 +62,14 @@
             </a>
         </div>
     </nav>
+
 </section>
 <section id="contentContainer">
     <div id="content">
         <div id="productContainer">
             <div id="product">
-                <p>
+                <p th:text="#{loremIpsum}">
+
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet convallis nisi. Sed ac sem
                     nec
                     velit facilisis euismod. Phasellus ex ex, ultrices ut fermentum non, eleifend et nisl. Etiam nec dui
@@ -115,5 +124,30 @@
         </div>
     </nav>
 </section>
+
+<!-- Login modal -->
+<div class="modal fade" id="loginModal" role="dialog">
+    <div class="modal-dialog loginForm">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="header">
+                <a type="button" class="close" data-dismiss="modal">&times;</a>
+                <h1 class="modal-title">Log in</h1>
+            </div>
+            <form th:action="@{/loginSubmission}" method="post">
+                <p>Username</p>
+                <input type="text" th:name="username" placeholder="Type your username . . .">
+                <hr>
+                <p>Password</p>
+                <input type="password" th:name="password" placeholder="Type your password . . .">
+                <hr>
+                <button type="submit" value="Login">login</button>
+            </form>
+        </div>
+
+    </div>
+</div>
+
 </body>
 </html>
