--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -11,57 +11,82 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spectral">
 
     <!-- modal test code -->
-    <link href="/styles/login.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
 <body>
 <section id="navigationContainer">
-    <nav id="navBar">
-        <div id="navBar-left">
-            <a href="/index"><img th:src="@{~/img/logos/treecreateLogo/TCTextLogo.svg}"
-                                  alt="treecreate" id="treecreateLogo" class="filterColor">
-                <hr class="hoverLine">
-            </a>
-            <a href="https://www.facebook.com/treecreate.dk" target="popup"
-               onclick="window.open('https://www.facebook.com/treecreate.dk', 'name', 'width=600,height=800')">
-                <img th:src="@{~/img/logos/facebookBlackLogo.svg}" alt="facebook" id="facebookIcon"
-                     class="icon filterColor">
-                <hr class="hoverLine">
-            </a>
-            <a href="https://www.instagram.com/tree_create/" target="popup"
-               onclick="window.open('https://www.instagram.com/tree_create/','name','width=600,height=800')">
-                <img th:src="@{~/img/logos/instagramBlackLogo.svg}" alt="instagram" id="instagramIcon"
-                     class="icon filterColor">
-                <hr class="hoverLine">
-            </a>
+
+    <!-- Login modal -->
+    <div class="modal fade" id="loginModal" role="dialog">
+        <div class="modal-dialog loginForm">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="header">
+                    <a type="button" class="close" data-dismiss="modal">&times;</a>
+                    <h1 class="modal-title">Log in</h1>
+                </div>
+                <form th:action="@{/login}" method="post">
+                    <p>Username</p>
+                    <input type="text" th:name="username" placeholder="Type your username . . .">
+                    <hr>
+                    <p>Password</p>
+                    <input type="password" th:name="password" placeholder="Type your password . . .">
+                    <hr>
+                    <button type="submit" value="Login">login</button>
+                </form>
+            </div>
+
         </div>
-        <div id="navBar-right">
-            <a href="/index">
-                <span>Home</span>
-                <hr class="hoverLine">
-            </a>
-            <a href="/aboutUs">
-                <span>About Us</span>
-                <hr class="hoverLine">
-            </a>
-            <a href="/shoppingBasket"><img th:src="@{~/img/icons/shoppingBasketIcon.svg}" alt="basket"
-                                           id="shoppingBasketIcon" class="icon filterColor">
-                <span> (0) Items</span>
-                <hr class="hoverLine">
-            </a>
-            <a data-toggle="modal" data-target="#loginModal">
-                <span>Login</span>
-                <hr class="hoverLine">
-            </a>
-            <a href="/changeLanguage"><img th:src="@{~/img/icons/englishIcon.svg}" alt="change language"
-                                           id="changeLanguageIcon" class="icon">
-                <hr class="hoverLine">
-            </a>
-        </div>
-    </nav>
+    </div>
+    <section id="navbarContainer">
+        <nav id="navBar">
+            <div id="navBar-left">
+                <a href="/index"><img th:src="@{~/img/logos/treecreateLogo/TCTextLogo.svg}"
+                                      alt="treecreate" id="treecreateLogo" class="filterColor">
+                    <hr class="hoverLine">
+                </a>
+                <a href="https://www.facebook.com/treecreate.dk" target="popup"
+                   onclick="window.open('https://www.facebook.com/treecreate.dk', 'name', 'width=600,height=800')">
+                    <img th:src="@{~/img/logos/facebookBlackLogo.svg}" alt="facebook" id="facebookIcon"
+                         class="icon filterColor">
+                    <hr class="hoverLine">
+                </a>
+                <a href="https://www.instagram.com/tree_create/" target="popup"
+                   onclick="window.open('https://www.instagram.com/tree_create/','name','width=600,height=800')">
+                    <img th:src="@{~/img/logos/instagramBlackLogo.svg}" alt="instagram" id="instagramIcon"
+                         class="icon filterColor">
+                    <hr class="hoverLine">
+                </a>
+            </div>
+            <div id="navBar-right">
+                <a href="/index">
+                    <span>Home</span>
+                    <hr class="hoverLine">
+                </a>
+                <a href="/aboutUs">
+                    <span>About Us</span>
+                    <hr class="hoverLine">
+                </a>
+                <a href="/shoppingBasket"><img th:src="@{~/img/icons/shoppingBasketIcon.svg}" alt="basket"
+                                               id="shoppingBasketIcon" class="icon filterColor">
+                    <span> (0) Items</span>
+                    <hr class="hoverLine">
+                </a>
+                <a id="loginButton" data-toggle="modal" data-target="#loginModal">
+                    <span>Login</span>
+                    <hr class="hoverLine">
+                </a>
+                <a href="/changeLanguage"><img th:src="@{~/img/icons/englishIcon.svg}" alt="change language"
+                                               id="changeLanguageIcon" class="icon">
+                    <hr class="hoverLine">
+                </a>
+            </div>
+        </nav>
+
+    </section>
 
 </section>
 <section id="contentContainer">
@@ -124,30 +149,6 @@
         </div>
     </nav>
 </section>
-
-<!-- Login modal -->
-<div class="modal fade" id="loginModal" role="dialog">
-    <div class="modal-dialog loginForm">
-
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="header">
-                <a type="button" class="close" data-dismiss="modal">&times;</a>
-                <h1 class="modal-title">Log in</h1>
-            </div>
-            <form th:action="@{/loginSubmission}" method="post">
-                <p>Username</p>
-                <input type="text" th:name="username" placeholder="Type your username . . .">
-                <hr>
-                <p>Password</p>
-                <input type="password" th:name="password" placeholder="Type your password . . .">
-                <hr>
-                <button type="submit" value="Login">login</button>
-            </form>
-        </div>
-
-    </div>
-</div>
 
 </body>
 </html>
