--- a/src/main/resources/templates/home/landingPage.html
+++ b/src/main/resources/templates/home/landingPage.html
@@ -41,11 +41,11 @@
                                 th:text="#{landing.submit}"></button>
                     </div>
                     <div class="icon-row-top">
-                        <a href="/facebook" target="popup"
+                        <a target="popup"
                            onclick="window.open('https://www.facebook.com/treecreate.dk', 'name', 'width=600,height=800')">
                             <img th:src="@{~/img/logos/facebookWhiteLogo.svg}" alt="facebook" id="facebookLogo"
                                  class="icon"></a>
-                        <a href="https://www.instagram.com/tree_create/" target="popup"
+                        <a target="popup"
                            onclick="window.open('https://www.instagram.com/tree_create/','name','width=600,height=800')">
                             <img th:src="@{~/img/logos/instagramWhiteLogo.svg}" alt="instagram" id="instagramLogo"
                                  class="icon"></a>
