--- a/src/main/resources/static/styles/index.css
+++ b/src/main/resources/static/styles/index.css
@@ -18,6 +18,8 @@ body, html
     --textColor: #000000;
     --actionColor: #EBC6AB;
     --inactiveColor: rgba(0, 0, 0, 0.4);
+    --popupColor: #8FBC8F;
+    --popupErrorColor: #bc8f8f;
 
     --fontExtraSmall: 8px;
     --fontSmall: 12px;
