--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -19,6 +19,9 @@
 <body>
 <section id="navigationContainer">
 
+    <div id="popupContainer" class="popupContainer">
+        <div id="popup" class="popup"><p id="popupText">Welcome Back!</p></div>
+    </div>
     <!-- Login modal -->
     <div class="modal fade" id="loginModal" role="dialog">
         <div class="modal-dialog loginForm">
@@ -42,8 +45,8 @@
             </div>
         </div>
 
-        <div id="popupContainer">
-            <div id="popup"><p id="popupText">Welcome Back!</p></div>
+        <div id="popupModalContainer" class="popupContainer">
+            <div id="popupModal" class="popup"><p id="popupModalText">Welcome Back!</p></div>
         </div>
     </div>
 
