--- a/src/main/resources/static/styles/popup.css
+++ b/src/main/resources/static/styles/popup.css
@@ -1,4 +1,4 @@
-#popupContainer
+.popupContainer
 {
     position: fixed;
     left: 50%;
@@ -8,7 +8,7 @@
 }
 
 /* The actual popup (appears on top) */
-#popup
+.popup
 {
     font-size: 2vw;
     width: 40vw;
