--- a/src/main/resources/templates/profile/accountInfo.html
+++ b/src/main/resources/templates/profile/accountInfo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Account Information</title>
-    <link th:href="@{/img/logos/treecreateLogo/browserLogo.svg}" rel="icon" >
+    <link th:href="@{/img/logos/treecreateLogo/browserLogo.svg}" rel="icon">
     <link th:href="@{/styles/index.css}" rel="stylesheet">
     <link th:href="@{/styles/productNavbar.css}" rel="stylesheet">
     <link th:href="@{/styles/productFooter.css}" rel="stylesheet">
@@ -16,29 +16,46 @@
     <section th:replace="products/productTemplate :: #navigationContainer"></section>
     <section id="contentContainer">
         <div id="profileNavContainer">
-            <div class="profileNav active">
-                <span>Account info</span>
-            </div>
-            <div class="profileNav">
-                <span>Tree collection</span>
-            </div>
-            <div class="profileNav">
-                <span>Orders</span>
-            </div>
-            <div class="profileNav">
-                <span>Log out</span>
-            </div>
+            <a href="/account/info">
+                <div class="profileNav active">
+                    <span>Account info</span>
+                </div>
+            </a>
+            <a href="/account/collections">
+                <div class="profileNav">
+                    <span>Tree collection</span>
+                </div>
+            </a>
+            <a href="/account/orders">
+                <div class="profileNav">
+                    <span>Orders</span>
+                </div>
+            </a>
+            <a href="/logout">
+                <div class="profileNav">
+                    <span>Log out</span>
+                </div>
+            </a>
         </div>
         <div id="details">
             <span id="formTitle">ACCOUNT INFO</span>
             <form action="/account/updateInfo" method="post" id="formUpdateInfo">
                 <input type="number" name="id" th:value="${user.id}" hidden>
-                <label for="inputPhoneNumber">Phone Number:</label><input type="number" name="inputPhoneNumber" id="inputPhoneNumber" th:value="${user.phoneNumber}" maxlength="15" required>
-                <label for="inputEmail">Email:</label><input type="email" name="inputEmail" id="inputEmail" th:value="${user.email}" maxlength="254" required>
-                <label for="inputName">Name:</label><input type="text" name="inputName" id="inputName" th:value="${user.name}" maxlength="80" required>
-                <label for="inputStreetAddress">Street Name:</label><input type="text" name="inputStreetAddress" id="inputStreetAddress" th:value="${user.streetAddress}" maxlength="99" required>
-                <label for="inputCity">City:</label><input type="text" name="inputCity" id="inputCity" th:value="${user.city}" maxlength="50" required>
-                <label for="inputPostcode">Postcode:</label><input type="text" name="inputPostcode" id="inputPostcode" th:value="${user.postcode}" maxlength="15" required>
+                <label for="inputPhoneNumber">Phone Number:</label>
+                <input type="number" name="inputPhoneNumber" id="inputPhoneNumber" th:value="${user.phoneNumber}"
+                       maxlength="15" required>
+                <label for="inputEmail">Email:</label>
+                <input type="email" name="inputEmail" id="inputEmail" th:value="${user.email}" maxlength="254" required>
+                <label for="inputName">Name:</label>
+                <input type="text" name="inputName" id="inputName" th:value="${user.name}" maxlength="80" required>
+                <label for="inputStreetAddress">Street Name:</label>
+                <input type="text" name="inputStreetAddress" id="inputStreetAddress" th:value="${user.streetAddress}"
+                       maxlength="99" required>
+                <label for="inputCity">City:</label>
+                <input type="text" name="inputCity" id="inputCity" th:value="${user.city}" maxlength="50" required>
+                <label for="inputPostcode">Postcode:</label>
+                <input type="text" name="inputPostcode" id="inputPostcode" th:value="${user.postcode}" maxlength="15"
+                       required>
             </form>
             <button type="submit" id="accountInfoSubmitBtn" form="formUpdateInfo">Update Info</button>
         </div>
