--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -88,6 +88,11 @@
                     <span>Login</span>
                     <hr class="hoverLine">
                 </a>
+                <a id="profileButton" href="/profile">
+                    <span>Profile</span>
+                    <hr class="hoverLine">
+                </a>
+                <script>isLoggedIn()</script>
                 <a href="/changeLanguage"><img th:src="@{~/img/icons/englishIcon.svg}" alt="change language"
                                                id="changeLanguageIcon" class="icon">
                     <hr class="hoverLine">
