--- a/src/main/resources/templates/profile/accountInfo.html
+++ b/src/main/resources/templates/profile/accountInfo.html
@@ -10,6 +10,7 @@
     <link th:href="@{/styles/profile.css}" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share+Tech">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spectral">
+    <script th:src="@{/js/login.js}"></script>
 </head>
 <body>
 <section id="pageContainer">
