Add functional tests for the login functionality
Add selenium-based tests for the login screen and the contents of the accountInfo page

--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -40,7 +40,7 @@
                     <input type="password" th:name="password" id="loginPassword" placeholder="Type your password . . ."
                            maxlength="60" required>
                     <hr>
-                    <button type="button" onclick="submitLogin()">login</button>
+                    <button type="button" onclick="submitLogin()" id="loginSubmitButton">login</button>
                 </form>
             </div>
         </div>
